// movie-api schema, reverse-engineered from the SQLAlchemy models in
// movie_api/models. See auth-api/models/schema.dbml for auth-api's.

Table movie_api.genres {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(100) [unique, not null]
  created_at timestamptz [not null, default: `now()`]
}

Table movie_api.movies {
  id uuid [pk, default: `gen_random_uuid()`]
  title varchar(255) [not null]
  description text [not null]
  poster_image_url text [not null]
  release_date date
  duration_minutes integer
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    title
  }
}

// Many-to-many junction table for Movies and Genres
Table movie_api.movie_genres {
  movie_id uuid [ref: > movie_api.movies.id, not null]
  genre_id uuid [ref: > movie_api.genres.id, not null]

  Indexes {
    (movie_id, genre_id) [pk]
  }
}

Table movie_api.showrooms {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(50) [unique, not null]
  capacity integer [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table movie_api.showroom_seats {
  id uuid [pk, default: `gen_random_uuid()`]
  showroom_id uuid [ref: > movie_api.showrooms.id, not null]
  row varchar(5) [not null]
  number integer [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    showroom_id
    (showroom_id, row, number) [unique, note: 'a seat label is unique within its showroom, reusable across showrooms']
  }
}

Table movie_api.showtimes {
  id uuid [pk, default: `gen_random_uuid()`]
  start_time timestamptz [not null]
  end_time timestamptz [not null]
  price numeric(10, 2) [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  note: 'duration_minutes is derived at the application layer from (end_time - start_time), not a stored column'

  Indexes {
    start_time
  }
}

// Many-to-many junction table for Movies and Showtimes, pinned to the
// showroom that particular screening takes place in — this is the actual
// "screening" record (movie + room + time slot). A showtime can screen
// multiple movies (e.g. a double feature) and a movie can screen at
// multiple showtimes (e.g. playing in different rooms at once).
Table movie_api.movie_showtimes {
  movie_id uuid [ref: > movie_api.movies.id, not null]
  showroom_id uuid [ref: > movie_api.showrooms.id, not null]
  showtime_id uuid [ref: > movie_api.showtimes.id, not null]

  Indexes {
    (movie_id, showroom_id, showtime_id) [pk]
  }
}

// A user's hold or booking on one seat for one screening. (movie_id,
// showroom_id, showtime_id) together identify the screening via a
// composite FK into movie_showtimes — see the Ref below, since DBML's
// inline `ref:` only supports single-column references.
Table movie_api.reservations {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [note: 'auth_api.users.id — no DB-level FK (movie_api does not own that table); null for GUEST bookings']
  user_type reservation_user_type [not null, note: 'enum: admin, regular, guest — snapshot of the booking role at reservation time']
  movie_id uuid [not null]
  showroom_id uuid [not null]
  showtime_id uuid [not null]
  showroom_seat_id uuid [ref: > movie_api.showroom_seats.id, not null]
  status reservation_status [not null, default: 'pending', note: 'enum: pending, confirmed, cancelled, expired']
  expires_at timestamptz [note: 'set for pending holds; see hold_ttl_seconds']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    user_id
    (movie_id, showroom_id, showtime_id, showroom_seat_id) [unique, note: 'partial: WHERE status IN (pending, confirmed) — prevents double-booking an active seat, while letting it be re-reserved once a hold is cancelled/expires']
  }
}

Ref: movie_api.reservations.(movie_id, showroom_id, showtime_id) > movie_api.movie_showtimes.(movie_id, showroom_id, showtime_id)

// A payment attempt against one reservation. Not one-to-one — a
// reservation can have multiple rows here (e.g. a failed attempt
// followed by a successful retry).
Table movie_api.payments {
  id uuid [pk, default: `gen_random_uuid()`]
  reservation_id uuid [ref: > movie_api.reservations.id, not null]
  amount numeric(10, 2) [not null]
  status payment_status [not null, default: 'pending', note: 'enum: pending, succeeded, failed, refunded']
  provider_reference varchar(255) [note: 'the payment gateway transaction/intent id, for reconciliation; null until the gateway responds']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    reservation_id
  }
}
